--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -83,7 +83,8 @@
 
                         <div class="form-item captcha-container full-width">
                             <div class="captcha-image">
-                                <div class="g-recaptcha" data-sitekey="Your_Site_Key_Here"></div>
+                                <!-- <div class="g-recaptcha" data-sitekey="Your_Site_Key_Here"></div> -->
+                                <div class="h-captcha" data-sitekey="1e587e86-fdf4-4872-9cc4-eebc536ebf2a"></div>
                             </div>
                         </div>
                     </div>
